--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Note Taker</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./assets/css/indexOverride.css"/>
 </head>
 
 <body>
@@ -15,13 +16,13 @@
     </a>
   </nav>
   <div class="container">
-    <div style="margin-top: 80px;" class="text-center p-5 mb-4 bg-light">
-      <h1 class="display-4">Note Taker <span role="img" aria-label="Memo">📝</span></h1>
-      <h4 class="mt-4">Take notes with Express</h4>
-      <a class="btn btn-primary btn-lg mt-4" href="/notes" role="button">Get Started</a>
+    <div style="margin-top: 80px;" class="text-center p-5 mb-4 bg-dark gray">
+      <h1 class="display-4 red">Note Taker <span role="img" aria-label="Memo">📝</span></h1>
+      <h4 class="mt-4 red">Take notes with Express</h4>
+      <a class="btn btn-primary btn-lg mt-4" href="./notes">Get Started</a>
     </div>
   </div>
-  <script src="/assets/js/index.js"></script>
+  <script src="./assets/js/index.js"></script>
 </body>
 
 </html>
